# ComfyUI-TextOnSegs

./: README.jp.md  README.md  __init__.py  pyproject.toml
py/node/: base.py  calc_max_font_size.py  colors.py  extract_dominant_color.py  segs_to_region.py
workflows/: draw_text_on_board.json  draw_text_on_board_floodfill.json  draw_text_on_face.json
