[project]
name = "comfyui-textonsegs"
description = "Add a node for drawing text with CR Draw Text of ComfyUI_Comfyroll_CustomNodes to the area of SEGS detected by Ultralytics Detector of ComfyUI-Impact-Pack."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/nkchocoai/ComfyUI-TextOnSegs"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nkchocoai"
DisplayName = "ComfyUI-TextOnSegs"
Icon = ""
